front page stopgap

--- a/assets/css/aki.css
+++ b/assets/css/aki.css
@@ -17,11 +17,6 @@
     margin-right: 50px;
 }
 
-.banner-image {
-    width: 100%;
-    margin-top: 10px;
-}
-
 #front-banner {
     padding: 0px;
     height: 75vh;
