--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -39,6 +39,15 @@ h3 {
   /*height: 1000px !important;*/
 }
 
+.banner-image {
+  /*height: 150px;*/
+  display: block;
+  max-width: 400px;
+  max-height: 400px;
+  margin: -60px 30px 0 -100px;
+  padding: 0px;
+}
+
 #front-banner .banner-title {
   color: #000 !important;
   font-weight: 700;
@@ -145,6 +154,10 @@ h3 {
 }
 
 /* Product section */
+#product-section {
+  padding-bottom: 80px;
+}
+
 #product-screenshot {
     width: 100%;
     margin-bottom: 0;
